--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,4 +3,6 @@
     <color name="colorPrimary">#00796B</color>
     <color name="colorPrimaryDark">#009688</color>
     <color name="colorAccent">#FFC107</color>
+    <color name="white">#FFFFFF</color>
+    <color name="whiteInactive">#80FFFFFF</color>
 </resources>
